# theramin

./: .gitmodules  Cargo.toml  build.rs  plan.txt
src/: blain.rs  input.rs  lib.rs  main.rs  manymouse.rs  midi.rs  use_theramin_routine.rs  use_watch_routine.rs
