[package]
name = "theramin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
dioxus = "0.5.0"
dioxus-desktop = "0.5.0"
tokio = { version = "1.28", features = ["sync"] }

[build-dependencies]
cc = "1.0.88"
